# uv-path-dependencies-test

./: .gitmodules  README.md  main.py  pyproject.toml
